// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BasicLogDiff 🎏 Combination use  1`] = `
<div
  class="log-diff-space-divide"
>
  <span
    class="ant-typography log-diff-item-label"
  >
    <span
      class="log-diff-label-sign"
    >
      期间
    </span>
  </span>
  <span
    class="ant-typography"
  >
    <span
      class="log-diff-pass log-diff-space"
    >
      <span
        class="log-diff-space"
      >
        2020-05-25
      </span>
      <span
        class="log-diff-space"
      >
        2020-05-27
      </span>
    </span>
    <span
      class="log-diff-now"
    >
      <span
        class="log-diff-space"
      >
        2020-05-28
      </span>
      <span
        class="log-diff-space"
      >
        2020-05-29
      </span>
    </span>
  </span>
</div>
`;

exports[`BasicLogDiff 🎏 base use 1`] = `
Array [
  <div
    class="log-diff-space-divide"
  >
    <span
      class="ant-typography log-diff-item-label"
    >
      <span
        class="log-diff-label-sign"
      >
        合同名称
      </span>
    </span>
    <span
      class="ant-typography"
    >
      <span
        class="log-diff-pass log-diff-space"
      >
        <span
          class="log-diff-space"
        >
          众包挂靠
        </span>
      </span>
      <span
        class="log-diff-now"
      >
        -
      </span>
    </span>
  </div>,
  <div
    class="log-diff-space-divide"
  >
    <span
      class="ant-typography log-diff-item-label"
    >
      <span
        class="log-diff-label-sign"
      >
        身份证人像面照片
      </span>
    </span>
    <span
      class="ant-typography"
    >
      <span
        class="log-diff-pass log-diff-space"
      >
        <a
          href="http://erp-1258916733.cos.ap-shanghai.myqcloud.com/manage/temp/378bbd5adad4e1f0266518522c559e42.mov"
        >
          http://erp-1258916733.cos.ap-shanghai.myqcloud.com/manage/temp/378bbd5adad4e1f0266518522c559e42.mov
        </a>
      </span>
      <span
        class="log-diff-now"
      >
        -
      </span>
    </span>
  </div>,
  <div
    class="log-diff-space-divide"
  >
    <span
      class="ant-typography log-diff-item-label"
    >
      <span
        class="log-diff-label-sign"
      >
        有效期限是否长期
      </span>
    </span>
    <span
      class="ant-typography"
    >
      <span
        class="log-diff-pass log-diff-space"
      >
        <span
          class="log-diff-space"
        >
          否
        </span>
      </span>
      <span
        class="log-diff-now"
      >
        <span
          class="log-diff-space"
        >
          是
        </span>
      </span>
    </span>
  </div>,
]
`;

exports[`BasicLogDiff 🎏 list use  1`] = `
<div
  class="ant-list ant-list-sm ant-list-split ant-list-bordered"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <ul
        class="ant-list-items"
      >
        <li
          class="ant-list-item"
        >
          <div
            class="log-diff-space-divide"
          >
            <span
              class="ant-typography log-diff-item-label"
            >
              <span
                class="log-diff-label-sign"
              >
                地区
              </span>
            </span>
            <span
              class="ant-typography"
            >
              <span
                class="log-diff-pass log-diff-space"
              >
                <span
                  class="log-diff-space"
                >
                  北京
                </span>
                <span
                  class="log-diff-space"
                >
                  上海
                </span>
              </span>
              <span
                class="log-diff-now"
              >
                -
              </span>
            </span>
          </div>
          <div
            class="log-diff-space-divide"
          >
            <span
              class="ant-typography log-diff-item-label"
            >
              <span
                class="log-diff-label-sign"
              >
                证书
              </span>
            </span>
            <span
              class="ant-typography"
            >
              <span
                class="log-diff-pass log-diff-space"
              >
                <span
                  class="log-diff-space"
                >
                  a287
                </span>
              </span>
              <span
                class="log-diff-now"
              >
                -
              </span>
            </span>
          </div>
        </li>
        <li
          class="ant-list-item"
        >
          <div
            class="log-diff-space-divide"
          >
            <span
              class="ant-typography log-diff-item-label"
            >
              <span
                class="log-diff-label-sign"
              >
                地区
              </span>
            </span>
            <span
              class="ant-typography"
            >
              <span
                class="log-diff-pass log-diff-space"
              >
                <span
                  class="log-diff-space"
                >
                  上海
                </span>
              </span>
              <span
                class="log-diff-now"
              >
                -
              </span>
            </span>
          </div>
          <div
            class="log-diff-space-divide"
          >
            <span
              class="ant-typography log-diff-item-label"
            >
              <span
                class="log-diff-label-sign"
              >
                证书
              </span>
            </span>
            <span
              class="ant-typography"
            >
              <span
                class="log-diff-pass log-diff-space"
              >
                <span
                  class="log-diff-space"
                >
                  a273
                </span>
              </span>
              <span
                class="log-diff-now"
              >
                -
              </span>
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
